
CHANGE LOG
=================================================

== Changelog ==

= 1.2.3.3 =
* Added course category filter on the courses admin page
* Fixed issue with thumbnails not displaying or getting generated for courses.
* Fixed issues with WordPress search when CoursePress plugin is active
* Fixed oEmbeds when pasting links to supported websites in Unit Elements.

= 1.2.3.2 =
* Fixed translation file

= 1.2.3.1 =
* Updated MarketPress to 2.9.5.9
* Added additional set of instructor capabilities for Discussions
* CSS improvements (added better CSS styles on the feature course buttons in the CoursePress theme)
* Updated translation file
* Added support for WordPress "Week Starts On" day in the course date fields and the Unit Availability field
* Fixed issue with saving course categories
* Fixed issue with showing "No elements have been added to this page yet" on the last unit page
* Fixed issue where users saving their own profiles remove instructor capabilities
* Fixed issue with MarketPress sale price (not being saved)
* Fixed issue with primary blog on multisite
* Fixed issue with pagination class (not displaying more than 10 pages)
* Fixed issue with not showing draft units preview (for both admin and assigned instructors)
* Fixed issue with duplicate course and MarketPress products
* Other code improvements

= 1.2.2.9 =
* Added course reordering on courses admin page (drag & drop)
* Added new options under CoursePress general settings for controlling course order in admin and front 
* Added option for displaying different number of rows on the courses admin page
* New hooks for developers and code improvements
* Fixed issues with loosing element content 

= 1.2.2.8 =
* Critical Fix: Fixed bug preventing elements being added to units.

= 1.2.2.7 =
* Resolving translation issues on general settings page and email body (functions)
* Included new translation file containing all localization strings