@@ -11,6 +11,7 @@ CHANGE LOG
 * Fixed issue with thumbnails not displaying or getting generated for courses.
 * Fixed issues with WordPress search when CoursePress plugin is active
 * Fixed oEmbeds when pasting links to supported websites in Unit Elements.
+* Fixed issue with student access to the enrolled courses
 
 = 1.2.3.2 =
 * Fixed translation file
